<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ahmed.atwa.popularmovies.ui.main.MainActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.sofit.test.ui.activity.login.LoginViewModel" />

    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/lblTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1"/>

    <TextView
        android:id="@+id/lblSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:text="@string/signup"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:onClick="@{()->viewModel.onSignUp()}"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1"/>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        app:layout_constraintTop_toBottomOf="@+id/lblTxt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/lblProfile"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_110sdp"
        android:src="@drawable/profile"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintTop_toBottomOf="@+id/lblProfile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="@dimen/_40sdp"
        android:hint="@string/username"
        android:paddingStart="@dimen/_20sdp"
        android:text="@={viewModel.emailText}"
        android:background="@drawable/edittext_rounded"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edtUsername"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="@dimen/_40sdp"
        android:hint="@string/password"
        android:paddingStart="@dimen/_20sdp"
        android:text="@={viewModel.passwordText}"
        android:background="@drawable/edittext_rounded"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_7sdp"
        android:onClick="@{()->viewModel.onLogin()}"
        app:layout_constraintTop_toBottomOf="@+id/view5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:onClick="@{()->viewModel.onLogin()}"
            android:background="@drawable/corner_radius_outlined"
            />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>