<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ahmed.atwa.popularmovies.ui.main.MainActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.sofit.test.ui.fragment.profile.ProfileViewModel" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/lblTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/profile"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view1"/>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintTop_toBottomOf="@+id/lblTxt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/lblProfile"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_140sdp"

            android:src="@drawable/camera_icon"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            app:layout_constraintTop_toBottomOf="@+id/lblProfile"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardvieew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@+id/view3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="@dimen/_230sdp"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/name"
                android:text="@={viewModel.nameText}"
                android:paddingStart="@dimen/_20sdp"
                android:background="@drawable/edittext_rounded_white"
                />

        </androidx.cardview.widget.CardView>



        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            app:layout_constraintTop_toBottomOf="@+id/cardvieew"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@+id/view4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <Spinner
                android:id="@+id/spnCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:layout_gravity="center_vertical"
                android:paddingStart="@dimen/_20sdp"
                />

        </androidx.cardview.widget.CardView>


        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/cardview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_7sdp"
            app:layout_constraintTop_toBottomOf="@+id/view5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:onClick="@{()->viewModel.onSignUp()}"
                android:background="@drawable/corner_radius_outlined"
                />
        </androidx.cardview.widget.CardView>





    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>